# Hypermindz-CrewAi-Agents

content-marketing-ideas/: .env.example  README.md  pyproject.toml
content-marketing-ideas/src/content_marketing_ideas/: crew.py  main.py
flow-example/: pyproject.toml
flow-example/src/write_a_book_with_flows/: main.py
flow-example/src/write_a_book_with_flows/crews/outline_book_crew/: outline_crew.py
flow-example/src/write_a_book_with_flows/crews/outline_book_crew/config/: agents.yaml
flow-example/src/write_a_book_with_flows/crews/write_book_chapter_crew/: write_book_chapter_crew.py
flow-example/src/write_a_book_with_flows/crews/write_book_chapter_crew/config/: agents.yaml
fraud-detector/src/fraud_detector/: main.py
hypermindz-knowledge-example/: .env.example  README.md  pyproject.toml
hypermindz-knowledge-example/src/knowledge_example/: crew.py
hypermindz-knowledge-example/src/knowledge_example/config/: agents.yaml  tasks.yaml
job-change-monitor/src/job_change_monitor/: crew.py  main.py
job_posting/: README.md  pyproject.toml
job_posting/db/: chroma.sqlite3
job_posting/src/job_posting/: main.py
knowledge-example/: .env.example  README.md  pyproject.toml  report.md
knowledge-example/knowledge/: dataset_knowledge_source.py
knowledge-example/src/knowledge_example/: crew.py  main.py
knowledge-example/src/knowledge_example/config/: agents.yaml
lead-scoring/: README.md  pyproject.toml
lead-scoring/src/lead_scoring/: main.py
trip_planner/: .env.example  pyproject.toml
trip_planner/src/trip_planner/: crew.py  main.py
trip_planner/src/trip_planner/config/: agents.yaml  tasks.yaml
trip_planner/src/trip_planner/tools/: browser_tools.py  calculator_tools.py
zendesk-categorize-and-sentiment-analysis/src/zendesk_categorize_and_analyze/: main.py
zendesk-ticket-analysis/: .env.example
zendesk-ticket-analysis/src/zendesk_ticket_analysis/: main.py
