[project]
name = "knowledge_example"
version = "0.1.0"
description = "knowledge example for crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.12"
dependencies = [
    "crewai[tools]>=0.120.1,<1.0.0"
]

[project.scripts]
knowledge_example = "knowledge_example.main:run"
run_crew = "knowledge_example.main:run"
train = "knowledge_example.main:train"
replay = "knowledge_example.main:replay"
test = "knowledge_example.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
